--- a/configs/plateau/swin/cifar_lora.yaml
+++ b/configs/plateau/swin/cifar_lora.yaml
@@ -7,20 +7,30 @@ trainer:
     class_path: pytorch_lightning.loggers.CSVLogger
     init_args:
       save_dir: output
-      name: cifar10
+      name: swin
   max_steps: 5000
-  val_check_interval: 500
+  val_check_interval: 100
 model:
-  model_name: vit-b16-224-in21k
-  training_mode: full
+  model_name: "swin"
+  training_mode: lora
   optimizer: sgd
-  lr: 0.01
+  lr: 0.05
   momentum: 0.9
   weight_decay: 0.0
-  scheduler: cosine
+  scheduler: plateau
   warmup_steps: 500
+  lora_r: 8
+  lora_alpha: 8
+
+
+
+  min_lr: 1e-6
+  threshhold: 1e-4
+  patience: 5
+  cooldown: 0
+  factor: 0.5
 data:
-  dataset: cifar10
+  dataset: cifar100
   root: data/
   size: 224
   batch_size: 128
@@ -28,5 +38,5 @@ data:
 model_checkpoint:
   filename: best-step-{step}-{val_acc:.4f}
   monitor: val_acc
-  save_last: true
   mode: max
+  save_last: true
