--- a/configs/plateau/vit/cifar_lora.yaml
+++ b/configs/plateau/vit/cifar_lora.yaml
@@ -7,20 +7,31 @@ trainer:
     class_path: pytorch_lightning.loggers.CSVLogger
     init_args:
       save_dir: output
-      name: flowers102-linear
-  max_steps: 2000
-  val_check_interval: 250
+      name: cifar100-lora-r8
+  max_steps: 5000
+  val_check_interval: 100
 model:
   model_name: vit-b16-224-in21k
-  training_mode: linear
+  training_mode: lora
   optimizer: sgd
-  lr: 1.0
+  lr: 0.05
   momentum: 0.9
   weight_decay: 0.0
-  scheduler: cosine
-  warmup_steps: 100
+  scheduler: plateau
+  warmup_steps: 500
+  lora_r: 8
+  lora_alpha: 8
+  
+  min_lr: 1e-6
+  threshhold: 1e-4
+  patience: 5
+  cooldown: 0
+  factor: 0.5
+  
+  
+
 data:
-  dataset: flowers102
+  dataset: cifar100
   root: data/
   size: 224
   batch_size: 128
@@ -28,5 +39,5 @@ data:
 model_checkpoint:
   filename: best-step-{step}-{val_acc:.4f}
   monitor: val_acc
-  save_last: true
   mode: max
+  save_last: true
