--- a/configs/random_plateau/swin/cifar_lora.yaml
+++ b/configs/random_plateau/swin/cifar_lora.yaml
@@ -7,23 +7,29 @@ trainer:
     class_path: pytorch_lightning.loggers.CSVLogger
     init_args:
       save_dir: output
-      name: pets27-lora-r8-bias
-  max_steps: 3000
-  val_check_interval: 250
+      name: swin
+  max_steps: 5000
+  val_check_interval: 100
 model:
-  model_name: vit-b16-224-in21k
+  model_name: "swin"
   training_mode: lora
   optimizer: sgd
   lr: 0.05
   momentum: 0.9
   weight_decay: 0.0
-  scheduler: cosine
-  warmup_steps: 300
-  lora_r: 1
-  lora_alpha: 16
-  lora_bias: all
+  scheduler: random_plateau
+  warmup_steps: 500
+  lora_r: 8
+  lora_alpha: 8
+
+  patience: 5
+  cooldown: 0
+  factor: 0.5
+  injection_mode: random
+  min_lr: 1e-6
+  threshhold: 1e-4
 data:
-  dataset: pets37
+  dataset: cifar100
   root: data/
   size: 224
   batch_size: 128
