--- a/configs/cosine/vit/cifar_lora.yaml
+++ b/configs/cosine/vit/cifar_lora.yaml
@@ -2,14 +2,14 @@
 trainer:
   accelerator: gpu
   devices: 1
-  precision: 16-mixed
+  precision: 16
   logger:
     class_path: pytorch_lightning.loggers.CSVLogger
     init_args:
       save_dir: output
       name: cifar100-lora-r8
-  max_steps: 5000
-  val_check_interval: 500
+  max_steps: 20000
+  val_check_interval: 100
 model:
   model_name: vit-b16-224-in21k
   training_mode: lora
