--- a/configs/cosine_restart/swin/cifar_lora.yaml
+++ b/configs/cosine_restart/swin/cifar_lora.yaml
@@ -2,14 +2,14 @@
 trainer:
   accelerator: gpu
   devices: 1
-  precision: 16-mixed
+  precision: 16
   logger:
     class_path: pytorch_lightning.loggers.CSVLogger
     init_args:
       save_dir: output
       name: swin
-  max_steps: 5000
-  val_check_interval: 500
+  max_steps: 20000
+  val_check_interval: 100
 model:
   model_name: "swin"
   training_mode: lora
@@ -24,7 +24,7 @@ model:
 
   min_lr: 1e-5
   t_0: 1500
-  t_mul: 1
+  t_mul: 2
   decay: 0.6
 
 data:
