--- a/configs/cosine_restart/vit/cifar_lora.yaml
+++ b/configs/cosine_restart/vit/cifar_lora.yaml
@@ -2,14 +2,14 @@
 trainer:
   accelerator: gpu
   devices: 1
-  precision: 16-mixed
+  precision: 16
   logger:
     class_path: pytorch_lightning.loggers.CSVLogger
     init_args:
       save_dir: output
       name: cifar100-lora-r8
-  max_steps: 5000
-  val_check_interval: 500
+  max_steps: 20000
+  val_check_interval: 100
 model:
   model_name: vit-b16-224-in21k
   training_mode: lora
@@ -17,14 +17,14 @@ model:
   lr: 0.05
   momentum: 0.9
   weight_decay: 0.0
-  scheduler: cosine_restarts
+  scheduler: cosine_restart
   warmup_steps: 500
   lora_r: 8
   lora_alpha: 8
   
   min_lr: 1e-5
   t_0: 1500
-  t_mul: 1
+  t_mul: 2
   decay: 0.6
 
 data:
